<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_manage_cities"
        android:title="@string/menu_manage_cities"
        android:icon="@drawable/ic_location"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_debug_database"
        android:title="🔍 Debug Database"
        android:icon="@drawable/ic_debug"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about"
        android:icon="@drawable/ic_info"
        app:showAsAction="never" />
</menu>
