<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#1976D2"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_normal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Temperature Unit Section -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_unit_label"
            android:textSize="@dimen/text_normal"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="@dimen/margin_small" />

        <RadioGroup
            android:id="@+id/rgTemperatureUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbCelsius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_celsius"
                android:textColor="#FFFFFF"
                android:checked="true" />

            <RadioButton
                android:id="@+id/rbFahrenheit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_fahrenheit"
                android:textColor="#FFFFFF" />
        </RadioGroup>



    </LinearLayout>
    </ScrollView>

</LinearLayout>
